--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Nettas</title>
-  <base href="/">
-
+  <title>Nettas Gardinsömnad | 070 - 471 47 19</title>
+  <meta name="description" content="Hej - " />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="gardinsömnad, sundsvall, gardiner, kuddar" />
+  <meta name="author" content="Mikael Sundstrom" />
+
+  <base href="/">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=League+Script" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
